--- a/Projetos Iniciais/HTML/index.html
+++ b/Projetos Iniciais/HTML/index.html
@@ -5,6 +5,13 @@
 		<title> Bruno Garcia de Angelis </title>
 	</head>
 	<body>
-		Bruno Garcia de Angelis
+		<header><h1>Header Cabeçalho da Página</h1></header>
+		<section>
+			<header><h2> Section - Sessão ou Lista de Posts</h2></header>
+		<article>
+			<header><h3>Post #1</h3></header>
+		</article>
+		</section>
+		<footer></footer>
 	</body>
 </html>
